--- a/dashboard/src/main/resources/templates/dashboard.html
+++ b/dashboard/src/main/resources/templates/dashboard.html
@@ -49,7 +49,14 @@
 </div>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
+<script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
+<script src="../assets/js/core/bootstrap.min.js" type="text/javascript"></script>
+<script src="../assets/js/plugins/bootstrap-switch.js"></script>
+<script src="../assets/js/plugins/chartist.min.js"></script>
+<script src="../assets/js/plugins/bootstrap-notify.js"></script>
+<script src="../assets/js/light-bootstrap-dashboard.js?v=2.0.0" ></script>
+<script src="../assets/js/demo.js"></script>
 <script th:src="@{/js/dashboard.js}"></script>  
 
 </body>
