--- a/dashboard/src/main/resources/templates/fragments/layout.html
+++ b/dashboard/src/main/resources/templates/fragments/layout.html
@@ -22,20 +22,14 @@
                 </a>
             </div>
             <ul class="nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/dashboard">
+                <li class="nav-item">
+                    <a id="navDashboard" class="nav-link active" href="/dashboard">
                         <i class="nc-icon nc-chart-pie-35"></i>
                         <p>Dashboard</p>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="/user">
-                        <i class="nc-icon nc-circle-09"></i>
-                        <p>Perfil</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="nav-link" href="/table">
+                    <a id="navReporte" class="nav-link" href="/table">
                         <i class="nc-icon nc-notes"></i>
                         <p>Reporte Prestamos</p>
                     </a>
@@ -46,6 +40,7 @@
     <div class="main-panel">
         <nav class="navbar navbar-expand-lg " color-on-scroll="500">
             <div class="container-fluid">
+                <a id="navTitleName" class="navbar-brand"></a>
                 <div class="collapse navbar-collapse justify-content-end" id="navigation">
                     <ul class="navbar-nav ml-auto">                            
                         <li class="nav-item">
@@ -64,12 +59,7 @@
                     <ul class="footer-menu">
                         <li>
                             <a href="/dashboard">
-                                Home
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/user">
-                                Perfil
+                                Dashboard
                             </a>
                         </li>
                         <li>
@@ -94,7 +84,6 @@
 <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
 <script src="../assets/js/core/bootstrap.min.js" type="text/javascript"></script>
 <script src="../assets/js/plugins/bootstrap-switch.js"></script>
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE" type="text/javascript"></script> -->
 <script src="../assets/js/plugins/chartist.min.js"></script>
 <script src="../assets/js/plugins/bootstrap-notify.js"></script>
 <script src="../assets/js/light-bootstrap-dashboard.js?v=2.0.0" ></script>
