Reporte jasper completo

--- a/dashboard/src/main/resources/templates/table.html
+++ b/dashboard/src/main/resources/templates/table.html
@@ -29,6 +29,7 @@
                     </div>
                 </div>
             </div>
+            <a class="btn btn-primary rounded submit p-3 px-5" style="position:relative; left:40%;" href="/jasper/repprestamos">Descargar</a>
         </div>
     </div>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
